--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
                     <div><a href="#skills">Skills</a></div>
                     <div><a href="#contactme">Contact Me</a></div>
                     <div><a href="#social-media">Social Media</a></div>
-                    <div><a href="/vishal CV.pdf">Resume</a></div>
+                    <div><a href="/vishal CV.pdf" target="_blank">Resume</a></div>
                 </div>
             </div>
-
+            <div id="welcome">
+                <h1>Welcome</h1>
+            </div>
             <div class="hero-section">
                 <!-- <div class="faded-text">Vishal Singh</div> -->
                 <div class="hero-section-left">
-                    <div class="hero-section-heading">Hey Welcome.... <br> I am Vishal Kr Singh</div>
+                    <!-- <div class="hero-section-heading">Hey Welcome.... <br> I am Vishal Kr Singh</div> -->
 
                     <div class="hero-section-heading hero-section-sub-heading">
-                        I am a <span class="role"></span>
+                        I am  <span class="role"></span>
                     </div>
 
                     <div class="hero-section-description">
-                        I'm a Software developer and here is my portfolio Website. Here you'll learn about my journey as
+                        I'm a Software developer and here is my portfolio Website. Here you'll see my journey as
                         a software developer.
                     </div>
 
@@ -53,7 +55,7 @@
             </div>
         </div>
 
-        <div class="project-section">
+        <div id="projects" class="project-section">
             <h2 class="page-header">Projects</h2>
 
             <div class="project-container">
@@ -61,23 +63,13 @@
                     <div class="project-number project-number-right">01</div>
                     <div class="project-content project-content-left">
 
-                        <div class="project-skills-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
-                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                        </div>
-
                         <h2 class="project-heading">Weather App</h2>
-
-                        <p class="project-subHeading">With the help of this app, you can easily get the current weather conditions and Search for any location's Weather.
-                        </p>
                         <div class="btn-grp">
-                            <button class="btn-pink btn-project">Read More</button>
+                            <button id="liveNow" class="btn-pink btn-project">
+                                <a href="https://imvishalkrsingh.github.io/weather-app/" target="_blank">Live now</a>
+                            </button>
                             <a href="https://github.com/imvishalkrsingh/weather-app">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
-                            </a>
-                            <a href="https://imvishalkrsingh.github.io/weather-app/">
-                                <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
                     </div>
@@ -86,22 +78,14 @@
                 <div class="project-card" id="project2">
                     <div class="project-number project-number-left">02</div>
                     <div class="project-content project-content-right">
-                        <div class="project-skill-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
-                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                        </div>
+                        
                         <h2 class="project-heading">Notes Adda</h2>
-                        <p class="project-sub-heading">
-                            A platform where you can find your college Notes.
-                        </p>
                         <div class="btn-group">
-                            <button class="btn-pink btn-project">Read More</button>
-                            <a href="https://github.com/imvishalkrsingh/NotesAdda">
+                            <button id="liveNow" class="btn-pink btn-project">
+                                <a href=https://imvishalkrsingh.github.io/NotesAdda/ target="_blank">Live now</a>
+                            </button>
+                            <a href="https://github.com/imvishalkrsingh/NotesAdda" target="_blank">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
-                            </a>
-                            <a href="https://imvishalkrsingh.github.io/NotesAdda/">
-                                <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
                     </div>
@@ -110,49 +94,31 @@
                 <div class="project-card" id="project3">
                     <div class="project-number project-number-right">03</div>
                     <div class="project-content project-content-left">
-                        <div class="project-skill-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
-                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                            <!-- <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" /> -->
-                            <!-- <img class="project-skill" src="./images/stack/Tailwind.png" alt="" /> -->
-                        </div>
 
                         <h2 class="project-heading">Password Generator</h2>
-                        <p class="project-sub-heading">
-                            A Website that helps you to generate a Random Password.
-                        </p>
-                        <div class="btn-group">
-                            <button class="btn-pink btn-project">Read More</button>
-                            <a href="https://github.com/imvishalkrsingh/Password-Generator">
+                        <div class="btn-grp">
+                            <button id="liveNow" class="btn-pink btn-project">
+                                <a href="https://imvishalkrsingh.github.io/Password-Generator/" target="_blank">Live now</a>
+                            </button>
+                            <a href="https://github.com/imvishalkrsingh/Password-Generator" target="_blank">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
                             </a>
-                            <a href="https://imvishalkrsingh.github.io/Password-Generator/">
-                                <i title="Live Link" class="fa-solid fa-link icon"></i>
-                            </a>
                         </div>
+
                     </div>
                 </div>
 
                 <div class="project-card" id="project4">
                     <div class="project-number project-number-left">04</div>
                     <div class="project-content project-content-right">
-                        <div class="project-skill-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
-                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                        </div>
+        
                         <h2 class="project-heading">TicTacToe</h2>
-                        <p class="project-sub-heading">
-                            It is a Website of TicTacToe Game. Here two players can play TicTacToe Game.
-                        </p>
-                        <div class="btn-group">
-                            <button class="btn-pink btn-project">Read More</button>
-                            <a href="https://github.com/imvishalkrsingh/Tic-Tac-Toe">
+                        <div class="btn-grp">
+                            <button id="liveNow" class="btn-pink btn-project">
+                                <a href="https://imvishalkrsingh.github.io/Tic-Tac-Toe/" target="_blank">Live now</a>
+                            </button>
+                            <a href="https://github.com/imvishalkrsingh/Tic-Tac-Toe" target="_blank">
                                 <i title="GitHubLink" class="fa-brands fa-github icon"></i>
-                            </a>
-                            <a href="https://imvishalkrsingh.github.io/Tic-Tac-Toe/">
-                                <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
                         </div>
                     </div>
@@ -261,7 +227,7 @@
         </div>
 
         <footer>
-          <div class="container">
+          <div id="containerr">
             <div class="footer-wrapper">
               <div class="footer-faded-text">Vishal Kumar Singh</div>
 
@@ -299,11 +265,12 @@
   <script>
     var typeData = new Typed(".role", {
       strings: [
-        "Mern Stack Developer",
-        "Web Developer",
-        "UI-UX Designer",
-        "Front-end Developer",
-        "Coder",
+        "Vishal Kumar Singh",
+        "a Mern Stack Developer",
+        "a Web Developer",
+        "a UI-UX Designer",
+        // "Front-end Developer",
+        "a Coder",
       ],
       loop: true,
       typeSpeed: 100,
