social media Links

--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
 
               <!-- Social media links -->
               <div id="social-media" class="icon-wrapper">
-                <a href="https://www.instagram.com/imvishalkrsingh/"><i class="fa-brands fa-instagram icon"></i></a>
-                <a href="https://www.linkedin.com/in/imvishalkrsingh/"> <i class="fa-brands fa-linkedin icon"></i></a>
-                <a href="https://github.com/imvishalkrsingh"><i class="fa-brands fa-github icon"></i></a>
-                <a href="https://twitter.com/imvishalkrsingh"><i class="fa-brands fa-twitter icon"></i></a>
-                <a href="mailto: vishalkumarsingh162@gmail.com"><i class="fa-regular fa-envelope icon"></i></a>
+                <a href="https://www.instagram.com/imvishalkrsingh/" target="_blank"><i class="fa-brands fa-instagram icon"></i></a>
+                <a href="https://www.linkedin.com/in/imvishalkrsingh/" target="_blank"> <i class="fa-brands fa-linkedin icon"></i></a>
+                <a href="https://github.com/imvishalkrsingh" target="_blank"><i class="fa-brands fa-github icon"></i></a>
+                <a href="https://twitter.com/imvishalkrsingh" target="_blank"><i class="fa-brands fa-twitter icon"></i></a>
+                <a href="mailto: vishalkumarsingh162@gmail.com" target="_blank"><i class="fa-regular fa-envelope icon"></i></a>
               </div>
 
             </div>
@@ -269,7 +269,6 @@
         "a Mern Stack Developer",
         "a Web Developer",
         "a UI-UX Designer",
-        // "Front-end Developer",
         "a Coder",
       ],
       loop: true,
