--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vishal Singh</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/faviconn.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 
 </head>
@@ -32,9 +32,7 @@
                 <h1>Welcome</h1>
             </div>
             <div class="hero-section">
-                <!-- <div class="faded-text">Vishal Singh</div> -->
                 <div class="hero-section-left">
-                    <!-- <div class="hero-section-heading">Hey Welcome.... <br> I am Vishal Kr Singh</div> -->
 
                     <div class="hero-section-heading hero-section-sub-heading">
                         I am  <span class="role"></span>
