--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                     </div>
 
                     <div class="hero-section-description">
-                        I'm a Software developer and here is my portfolio Website. Here you'll see my journey as
-                        a software developer.
+                        As a software developer, I create solutions for real-world challenges. Explore my portfolio to see my work.
                     </div>
 
                     <div class="btn-pink" id="btn">Hire me</div>
@@ -136,20 +135,12 @@
 
                 <div class="skill-subHeading">
                     <p>
-                        Hi Everyone, My name is Vishal Kr Singh, I am a Mern Stack Web Developer, I
-                        have been learning for last 6 months.
-                    </p>
-                    <p>
                         I love working on new and exciting technologies emerging nowadays. 
                         I have a keen interest in Web Development and I am always
                          looking for new opportunities to learn and grow.
                           I have good work experience with various startups where I was core
                            part of developer team and work on major features.
                     </p>
-                    <!-- <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis quidem
-                        quos ullam veritatis voluptates tenetur qui ipsa nulla culpa itaque?
-                    </p> -->
                 </div>
             </div>
 
