--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
     var typeData = new Typed(".role", {
       strings: [
         "Vishal Kumar Singh",
-        "a Mern Stack Developer",
-        "a Web Developer",
-        "a UI-UX Designer",
         "a Coder",
+        "a Web Developer",
+        "a Mern Stack Developer",
+        "a Cloud Engineer",
       ],
       loop: true,
       typeSpeed: 100,
